refactors to comply with SOLID principles, general improvements and adding some test coverage